...
    <string name="EXCHANGE_PLACE_HINT">Enter a place of exchange</string>
    <string name="APPROX_MARKET_VAL_TITLE">Approximate Market Value</string>
    <string name="MARKET_VALUE_HINT">Enter the approximate market value</string>
    <string name="PREF_EXCHANGE_TITLE">Preferred Exchanges in Return</string>
    <string name="CANCEL">Cancel</string>
    <string name="SUBMIT">Submit</string>
    <string name="PRODUCT_NAME_ERROR">Please enter a name for your product!</string>
    <string name="EXCHANGE_PLACE_ERROR">Please enter a place of exchange!</string>
    <string name="EMPTY_MARKET_VAL">Please enter an approximate market value!</string>
    <string name="MARKET_VAL_NEED_INT_ERROR">Please enter an integer market value!</string>
    <string name="SUCCESSFUL_PRODUCT_CREATION">Product created successfully!</string>
    <string name="SUCCESSFUL_PRODUCT_UPDATE">Product updated Successfully!</string>
    <string name="advanceSearch">Search</string>
    <string name="value_range">Value Range</string>
    <string name="value_from">from</string>
    <string name="value_to">to</string>
...
        <item>Furniture</item>
    </string-array>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="RATING_ERROR">Please enter a rating for this user.</string>
    <string name="CANNOT_EDIT_SOLD">Cannot edit a SOLD product</string>
    <string name="SUCCESSFUL_RATING">Rating Successful!</string>
    <string name="value_provided">Value Provided:</string>
    <string name="exchange_history">Exchange History:</string>
    <string name="value_received">Value Received:</string>
    <string name="type_your_message">Type your message</string>
...
