<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="407dp"
        android:layout_height="727dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <Button
            android:id="@+id/VisualizationBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/user_name_textview"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="Username"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/user_rating_ratingbar"
            android:layout_width="267dp"
            android:layout_height="73dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="12dp"
            android:numStars="5"
            android:padding="16dp"
            android:rating="4"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/value_received_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:text="@string/value_received"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/value_provided_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/value_provided"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/exchange_history_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            android:text="@string/exchange_history"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/exchange_history_listview"
            android:layout_width="wrap_content"
            android:layout_height="238dp"
            android:padding="16dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>