...

    <item
        android:id="@+id/nav_home"
        android:title="Home" />

    <item
        android:id="@+id/nav_profile"
        android:title="Profile" />

    <item
        android:id="@+id/nav_swap"
        android:title="Swap" />

...
